--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Jbone
 subtitle: ''
 description: ''
-keywords:
+keywords: jbone,Spring Cloud,sso,微服务
 author: Ma Junwei
 language: en
 timezone: ''
