--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -1,7 +1,9 @@
 site_description: Jbone - Spring Cloud综合应用实践和基础开发框架
+site_keywords : jbone,Spring Cloud,sso,微服务
 google_analytics: UA-46852172-3
-root_domain: jbone.cn
+root_domain: doc.jbone.cn
 vue_version: 2.5.16
+
 platinum_sponsors_china:
   - url:
     img:
