--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -1,4 +1,4 @@
-site_description: Jbone - Spring Cloud综合应用实践和基础开发框架
+site_description: Jbone - Spring Cloud微服务架构综合应用实践和基础开发框架
 site_keywords : jbone,Spring Cloud,sso,微服务
 google_analytics: UA-46852172-3
 root_domain: doc.jbone.cn
