--- a/_config.yml
+++ b/_config.yml
@@ -45,9 +45,9 @@ relative_link: false
 future: true
 highlight:
   enable: true
-  line_number: true
-  auto_detect: false
-  tab_replace: ''
+  line_number: false
+  tab_replace:
+  hljs: true
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
